# rust-hacl-star

./: .gitmodules  Cargo.toml  LICENSE
hacl-star-sys/: .gitignore  Cargo.toml  build.rs
hacl-star-sys/src/: lib.rs
hacl-star-sys/src/ffi/: mod.rs
src/: lib.rs
src/ed25519/: mod.rs
