[package]
name = "hacl-star"
version = "0.2.0"
authors = ["quininer <quininer@live.com>", "Tiago Carvalho <up201605259@fc.up.pt"]
description = "HACL*, a formally verified cryptographic library for Rust (binding to hacl-c)."
keywords = [ "hacl-star", "cryptography" ]
categories = [ "cryptography" ]
repository = "https://github.com/ditto-bft/rust-hacl-star"
documentation = "https://docs.rs/hacl-star/"
license = "MIT"
edition = "2018"

[workspace]
exclude = ["examples/hacl-box-wasm"]

[dependencies]
hacl-star-sys = { version = "0.1", path = "hacl-star-sys" }

[dev-dependencies]
