[package]
name = "hacl-star-sys"
version = "0.1.0"
authors = ["quininer <quininer@live.com>", "Tiago Carvalho <up201605259@fc.up.pt>"]
description = "HACL* FFI"
keywords = [ "hacl-star", "cryptographic" ]
categories = [ "no-std", "cryptography", "api-bindings" ]
repository = "https://github.com/quininer/rust-hacl-star"
documentation = "https://docs.rs/hacl-star-sys/"
license = "MIT"
edition = "2018"

[features]
use_std = [ "libc/use_std" ]

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
bindgen = "0.55.1"
